fixed some centering and spacing issues

--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 html, body {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     width: 40%;
 }
@@ -14,7 +14,6 @@ html, body {
 .caption {
     padding-left: 10px;
 }
-
 
 .caption span,
 .name {
@@ -35,6 +34,7 @@ header {
 
 .user-icon {
     width: 50px;
+    height: 50px;
     border-radius: 50%;
 }
 
@@ -68,7 +68,7 @@ header {
 /* POST */
 
 .post-section {
-    margin-top: 80px;
+    margin-top: 30px;
 }
 
 .posts {
